--- a/css/signin.css
+++ b/css/signin.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url("wallpaper.png");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+}
+
 .form-signin {
     max-width: 330px;
     padding: 15px;
