--- a/css/socialCSS_ns3.css
+++ b/css/socialCSS_ns3.css
@@ -23,3 +23,33 @@
     width: 70%;
     float: left;
 }
+
+.profilePic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    text-align: left;
+    float: left;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.friendPic {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    text-align: left;
+    float: left;
+    padding-left: 3px;
+    padding-right: 3px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.messageNotificationText {
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
